Fixed collapse menu (missing Bootstrap js)

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -5,6 +5,7 @@ body {
   font-size: 13px;
   line-height: 18px;
   padding-top: 60px; /* for Boostrap header */
+  padding-bottom: 40px;
 }
 
 p, ol, ul, td {
